feat: optimized priority interactions, add favorite interaction

--- a/Lab4/client/style.css
+++ b/Lab4/client/style.css
@@ -269,6 +269,15 @@ Tasks */
   cursor: pointer;
 }
 
+.task-list__fav {
+  width: 20px;
+  display: none;
+}
+
+.task-list__fav.active {
+  display: block;
+}
+
 .task-list__options-menu {
   margin: 0;
   padding: 0;
