--- a/Lab4/client/style.css
+++ b/Lab4/client/style.css
@@ -415,4 +415,73 @@ Media*/
   }
 }
 
+/* Taskgroup modal */
+
+.taskgroup-modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgba(0,0,0,0.5); 
+}
+
+.taskgroup-modal__content {
+  background-color: #fefefe;
+  margin: 15% auto; 
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; 
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.taskgroup-modal__input {
+  background-color: #F6F8FA;
+  border: 1px solid #7E7E7E;
+  outline: none;
+  outline-offset: 0;
+  border-radius: 60px;
+  font-size: 18px;
+
+  width: 100%;
+  height: 45px;
+
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.taskgroup-modal__create-btn {
+  width: 250px;
+  height: 50px;
+
+  outline: none;
+  border: none;
+  background-color: #67B3FF;
+  border-radius: 60px; 
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  cursor: pointer;
+
+  margin-top: 20px;
+}
+
 
